# ris2

./: CMakeLists.txt
docs/: Doxyfile.in
macro/: bunch_example.cc  dd_example.cc  example.cc  histo2d_example.cc  lambda_ris_sel_pt_2.cc  oven.cc  ratio_example.cc  v1_fopi_04.cc  v1_fopi_15.cc
macro/bmn_run8/analysis_note/: style2D.cc
macro/bmn_run8/analysis_note/files/: qa.recent_vf_2024_06_20.root
macro/bmn_run8/analysis_note/qa/: beta_pq.cc  fit_parameters.cc  m2_pq.cc  m2_pq_2212.cc  multiplicity.cc  n_sigma_2212.cc  pT_y_acceptance.cc  pT_y_efficiency.cc  vtx_distribution.cc  vtx_z.cc
macro/bmn_run8/analysis_note/v1/: F123_centrality.cc  dv1dy_sqrt_snn.cc  v1_proton_centrality.cc  v1_proton_chi2.cc  v1_proton_dca.cc  v1_proton_nhits.cc  v1_proton_noeff.cc  v1_proton_nonflow.cc  v1_proton_pT_y.cc  v1_proton_pid.cc  v1_proton_runid.cc  v1_proton_tof.cc  v1_proton_vtx.cc
macro/hades/files/: AgAg@123GEN4.root  AgAg@158GEN4_100k.root  AuAu@123GEN9_100k.root
macro/hades/qa/: dca.cc  multiplicity.cc  vertex.cc
src/: bunch.h  main.cc  main.cc.in  main_no_qntools.cc.in  picture.h  ris2.h  ris2_noqntools.h  wrap.h
